# ephemetoot

./: .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  contributing.md  ephemetoot.py  ephemetoot.scheduler.plist  example-config.yaml  example.config.py  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CNAME  _config.yml  contributing.md  index.md  install.md  options.md  upgrade.md
ephemetoot/: console.py  ephemetoot.py  plist.py
lib/: ephemetoot.py
src/ephemetoot/: console.py  ephemetoot.py
tests/: test_ephemetoot.py
